--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.opensource</groupId>
-	<artifactId>bundles</artifactId>
-	<version>1.0</version>
+	<artifactId>thirdparty-bundles</artifactId>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
